added temp display and button to change it

--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -16,16 +16,14 @@
 			<h5>Enter a location below to find out the current weather. Please note results may be up for interpretation. <i class="fa fa-smile-o" aria-hidden="true"></i></h5>	
 		</div>
 		<div class="row">
-			<div class="col-1"></div>
 			<div class="col-6">
 				<input type="text" name="gifType" class="form-control" id="query" placeholder="Anchorage, Alaska">
 			</div>
-			<div class="col-2">
+			<div class="col-6">
 				<button class="btn btn-primary" id="check">Check Weather</button>
-			</div>
-			<div class="col-2">
-				<button class="btn btn-danger" id="delete">Delete</button>
-			</div>
+        <button class="btn btn-danger mx-2" id="delete">Delete</button>
+        <button class="btn btn-info" id="changeTemp">Change Temp</button>
+      </div>
     </div>
   </div>
   <div class="container d-flex justify-content-around flex-nowrap text-center my-3">
