--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -24,7 +24,8 @@
         <button class="btn btn-danger mx-2" id="delete">Delete</button>
         <button class="btn btn-info" id="changeTemp">Change Temp</button>
       </div>
-    </div>
+		</div>
+		<div class="row" id="locationDisplay"></div>
   </div>
   <div class="container d-flex justify-content-around flex-nowrap text-center my-3">
 		<ul class="list-group mx-2" id="weatherDescription">
