--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -25,7 +25,7 @@
         <button class="btn btn-info" id="changeTemp">Change Temp</button>
       </div>
 		</div>
-		<div class="row" id="locationDisplay"></div>
+		<div class="row" id="messageDisplay"></div>
   </div>
   <div class="container d-flex justify-content-around flex-nowrap text-center my-3">
 		<ul class="list-group mx-2" id="weatherDescription">
