--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -21,8 +21,8 @@
 			</div>
 			<div class="col-6">
 				<button class="btn btn-primary" id="check">Check Weather</button>
-        <button class="btn btn-danger mx-2" id="delete">Delete</button>
-        <button class="btn btn-info" id="changeTemp">Change Temp</button>
+        <button class="btn btn-primary mx-2" id="changeTemp">Change Temp</button>
+        <button class="btn btn-primary" id="delete">Delete Gifs</button>
       </div>
 		</div>
 		<div class="row" id="messageDisplay"></div>
