corrected spelling of temperature

--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -27,7 +27,7 @@
   <div class="container d-flex justify-content-around flex-nowrap text-center my-3">
 		<ul class="list-group mx-2" id="weatherDescription">
     </ul>
-		<ul class="list-group mx-2" id="tempuratureDescription">
+		<ul class="list-group mx-2" id="temperatureDescription">
 		</ul>
     <ul class="list-group mx-2" id="windDescription">
 		</ul>
