--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -5,16 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Random Quote Generator</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="background">
-    <div>
-      <img class="responsive-img" src="https://s32.postimg.org/r58fqeq8l/01860_sanfrancisco_2560x1600.jpg"> 
-    </div>
+  <div class="container">
     <div id="quoteCard" class="row quote-card">
       <div class="col s12 m6 offset-m3">
         <div class="card hoverable">
@@ -28,20 +25,13 @@
     </div>
   </div>
   <div class="container">
-    <div class="container">
-    <div class="row">
-      <div class="col s6 offset-s3">
-        <div class="card hoverable">
-          <div class="card-content">
-            <p class="center-align"><i aria-hidden="true" class="fa fa-copyright"></i> Nathan Mallison  2016</p>
-          </div>
-        </div>
-      </div>
-    </div>
+    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="https://njm8.github.io/">Created by Nate Mallison</a>
   </div>
-  </div> 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script> 
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
   <script src="scripts.js"></script>
 </body>
 </html>
