fixed button issue and updated card random location function

--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="container">
-    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="https://njm8.github.io/">Created by Nate Mallison</a>
+    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="https://njm8.github.io/" target="_blank">Created by Nate Mallison</a>
   </div>
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
