fixed tweet button

--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -17,7 +17,7 @@
         <div class="card hoverable">
           <div class="card-content">
             <blockquote><p id="phrase">"Sometimes it is the people no one can imagine anything of, who do the things no one can imagine."</p><footer><cite id="author">- Alan Turing</cite></footer></blockquote>
-            <a onClick="tweetIt()" href="https://twitter.com/intent/tweet" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+            <a id="tweetIt" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
             <a class="right" href="#" id="newQuote">New Quote</a>
           </div>
         </div>
