--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -15,21 +15,21 @@
 			<h1>Check your local weather by <em>Gif!</em></h1>
 			<h5>Enter a location below to find out the current weather. Please note results may be up for interpretation. <i class="fa fa-smile-o" aria-hidden="true"></i></h5>	
 		</div>
-		<div class="row d-flex justify-content-around my-2">
-			<input type="text" name="gifType" class="form-control" id="query" placeholder="Anchorage, Alaska">
-			<button class="btn btn-primary" id="check">Check Weather</button>
-			<button class="btn btn-primary" id="changeTemp">Change Temp</button>
-			<button class="btn btn-primary" id="getMoreGifs">Get New Gifs</button>
-			<button class="btn btn-primary" id="delete">Delete Gifs</button>
+		<div class="row d-flex justify-content-around m-2">
+			<input type="text" name="gifType" class="form-control m-2" id="query" placeholder="Anchorage, Alaska">
+			<button class="btn btn-primary m-2" id="check">Check Weather</button>
+			<button class="btn btn-primary m-2" id="changeTemp">Change Temp</button>
+			<button class="btn btn-primary m-2" id="getMoreGifs">Get New Gifs</button>
+			<button class="btn btn-primary m-2" id="delete">Delete Gifs</button>
 		</div>
 		<div class="row" id="messageDisplay"></div>
   </div>
-  <div class="container d-flex justify-content-around flex-nowrap text-center my-3">
-		<ul class="list-group mx-2" id="weatherDescription">
+  <div class="container d-flex justify-content-around text-center my-3 flex-wrap">
+		<ul class="list-group m-2" id="weatherDescription">
     </ul>
-		<ul class="list-group mx-2" id="temperatureDescription">
+		<ul class="list-group m-2" id="temperatureDescription">
 		</ul>
-    <ul class="list-group mx-2" id="windDescription">
+    <ul class="list-group m-2" id="windDescription">
 		</ul>
 	</div>
 
