--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -32,6 +32,9 @@
     <ul class="list-group m-2" id="windDescription">
 		</ul>
 	</div>
+	<div class="container d-flex justify-content-center">
+    <a class="btn btn-primary m-2" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
+  </div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
