--- a/thankYouPage/index.html
+++ b/thankYouPage/index.html
@@ -17,7 +17,7 @@
         <div class="card-panel grey lighten-5">
           <div class="card-content">
             <blockquote><p>Thank you for getting in touch, I will be in contact with you soon.</p></blockquote>
-            <a class="waves-effect waves-teal btn-flat teal-text hoverable" href="https://njm8.github.io/" id="toPortfolio">Back to my portfolio</a>
+            <a class="waves-effect waves-teal btn-flat teal-text hoverable" href="http://www.natethedev.com/" id="toPortfolio">Back to my portfolio</a>
           </div>
         </div>
       </div>
