added link back to portfolio

--- a/speedShapes/speedShapesGame.html
+++ b/speedShapes/speedShapesGame.html
@@ -57,16 +57,15 @@
 					</tbody>
 				</table>
 			</div>
-			<div class="col-xs-2" id="timer-column">
+			<div class="col-xs-2 d-flex flex-column" id="timer-column">
 				<h1>Timer: <span id="time-left">30</span></h1>
-				<br>
-				<h3>Difficulty:</h3>
+				<h3 class="mt-4">Difficulty:</h3>
 				<div class="btn-group-vertical border rounded btn-group-toggle">
 					<label class="btn btn-light" id="input1"><input type="radio" name="options" id="difficulty1">First timer</label>
 					<label class="btn btn-light active"><input type="radio" name="options" id="difficulty2">Getting the hang of it</label>
 					<label class="btn btn-light"><input type="radio" name="options" id="difficulty3">This is much too hard</label>
-					
 				</div>
+				<a class="btn btn-info mt-auto" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
 			</div>
 		</div>
 	</div>
