refactored most code to vanilla JS. Added some ES6 features. Added message if screen is too small.

--- a/speedShapes/index.html
+++ b/speedShapes/index.html
@@ -61,7 +61,7 @@
 				<h1>Timer: <span id="time-left">30</span></h1>
 				<h3 class="mt-4">Difficulty:</h3>
 				<div class="btn-group-vertical border rounded btn-group-toggle">
-					<label class="btn btn-light" id="input1"><input type="radio" name="options" id="difficulty1">First timer</label>
+					<label class="btn btn-light"><input type="radio" name="options" id="difficulty1">First timer</label>
 					<label class="btn btn-light active"><input type="radio" name="options" id="difficulty2">Getting the hang of it</label>
 					<label class="btn btn-light"><input type="radio" name="options" id="difficulty3">This is much too hard</label>
 				</div>
