HTML validator corrections

--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -21,7 +21,7 @@
 			<button class="btn btn-primary" id="changeTemp">Change Temp</button>
 			<button class="btn btn-primary" id="getMoreGifs">Get New Gifs</button>
 			<button class="btn btn-primary" id="delete">Delete Gifs</button>
-			<button class="btn btn-primary" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</button>
+			<a class="btn btn-primary" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
 		</div>
 		<div class="row" id="messageDisplay"></div>
   </div>
@@ -33,14 +33,10 @@
     <ul class="list-group m-2 gifContainer" id="windDescription">
 		</ul>
 	</div>
-	<!-- <div class="container d-flex justify-content-center">
-    <a class="btn btn-primary m-2" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
-  </div> -->
-
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="scripts.js"></script>
+	<script src="scripts.js"></script>
 </body>
 </html>
 
