--- a/speedShapes/index.html
+++ b/speedShapes/index.html
@@ -74,7 +74,7 @@
 			<div class="modal-content mx-3 my-3">
 				<div class="modal-body">
 					<h4 id="final-message"></h4>
-					<button class="close" type="button" data-dismiss="modal" aria-label="close"><span caria-hidden='true'>&times;</span></button>
+					<button class="close" type="button" data-dismiss="modal" aria-label="close"><span aria-hidden='true'>&times;</span></button>
 				</div>
 			</div>
 		</div>
@@ -83,6 +83,6 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="speedShapesGame.js"></script>
+	<script src="speedShapesGame.js"></script>
 </body>
 </html>
