rel=noopener and defer scripts and updated jquery cdn

--- a/speedShapes/index.html
+++ b/speedShapes/index.html
@@ -4,7 +4,12 @@
 	<meta charset="utf-8">
 	<title>Speed Shapes Game</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
- 	<link rel="stylesheet" type="text/css" href="speedShapesGame.css">
+	<link rel="stylesheet" type="text/css" href="speedShapesGame.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous" defer></script>
+	<script src="speedShapesGame.js" defer></script>
+ </body>
 </head>
 <body>
 	<div class="container-fluid my-2">
@@ -65,7 +70,7 @@
 					<label class="btn btn-light active"><input type="radio" name="options" id="difficulty2">Getting the hang of it</label>
 					<label class="btn btn-light"><input type="radio" name="options" id="difficulty3">This is much too hard</label>
 				</div>
-				<a class="btn btn-info mt-auto" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
+				<a class="btn btn-info mt-auto" href="http://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
 			</div>
 		</div>
 	</div>
@@ -79,10 +84,4 @@
 			</div>
 		</div>
 	</div>
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-	<script src="speedShapesGame.js"></script>
-</body>
 </html>
