--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -7,6 +7,10 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous" defer></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous" defer></script>
+	<script src="scripts.js" defer></script>
 </head>
 
 <body>
@@ -21,7 +25,7 @@
 			<button class="btn btn-primary" id="changeTemp">Change Temp</button>
 			<button class="btn btn-primary" id="getMoreGifs">Get New Gifs</button>
 			<button class="btn btn-primary" id="delete">Delete Gifs</button>
-			<a class="btn btn-primary" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
+			<a class="btn btn-primary" href="http://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
 		</div>
 		<div class="row" id="messageDisplay"></div>
   </div>
@@ -33,10 +37,6 @@
     <ul class="list-group m-2 gifContainer" id="windDescription">
 		</ul>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-	<script src="scripts.js"></script>
 </body>
 </html>
 
