--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style.css">
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js" defer></script> 
+  <script src="scripts.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -25,13 +31,7 @@
     </div>
   </div>
   <div class="container">
-    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="http://www.natethedev.com/" target="_blank">Created by Nate Mallison</a>
+    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="http://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
   </div>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
-  <script src="scripts.js"></script>
 </body>
 </html>
