--- a/thankYouPage/index.html
+++ b/thankYouPage/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" type="text/css" rel="stylesheet">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen"/>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" defer></script>
+  <script src="js/materialize.js" defer></script>
   <title>Thank You</title>
 </head>
 <body>
@@ -17,14 +19,12 @@
         <div class="card-panel grey lighten-5">
           <div class="card-content">
             <blockquote><p>Thank you for getting in touch, I will be in contact with you soon.</p></blockquote>
-            <a class="waves-effect waves-teal btn-flat teal-text hoverable" href="http://www.natethedev.com/" id="toPortfolio">Back to my portfolio</a>
+            <a class="waves-effect waves-teal btn-flat teal-text hoverable" href="http://www.natethedev.com/" id="toPortfolio" rel="noopener">Back to my portfolio</a>
           </div>
         </div>
       </div>
     </div>
   </div>
   <a id="photoCred" href="https://unsplash.com/@marksolarski?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Mark Solarski"><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span >Mark Solarski</span></a>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
 </body>
 </html>
