removing local JS to CDN, compressed images

--- a/thankYouPage/index.html
+++ b/thankYouPage/index.html
@@ -9,7 +9,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" type="text/css" rel="stylesheet">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen"/>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" defer></script>
-  <script src="js/materialize.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js" defer></script>
   <title>Thank You</title>
 </head>
 <body>
