Updated img for lazy loading

--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -16,6 +16,9 @@
   <script src="scripts.js" defer></script>
 </head>
 <body>
+  <div id="bg">
+    <img data-src="https://s13.postimg.org/4p8p7anvr/01860_sanfrancisco_2560x1600-min.jpg" alt="Picture of houses in San Francisco">
+  </div>
   <div class="container">
     <div id="quoteCard" class="row quote-card">
       <div class="col s12 m6 offset-m3">
