basic tab functionality working, will need tweaking when loaded with actual data. api call working for title, 1st paragraph and url. not sure how to get rid of 1st paragraph but I have what I need.

--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -18,8 +18,19 @@
     </form>
     <a href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
   </header>
-  <ul>
-    
-  </ul>
+  <div class="tabs">
+    <div class="tabLinks">
+      <ul>
+        <li class="tabLink" id="1">One</li>
+        <li class="tabLink" id="2">Two</li>
+        <li class="tabLink" id="3">Three</li>
+      </ul>
+    </div>
+    <div>
+      <div class="tabContent center" id="tabContent1">content one</div>
+      <div class="tabContent slide-right" id="tabContent2">content two</div>
+      <div class="tabContent slide-right" id="tabContent3">content three</div>
+    </div>
+  </div>
 </body>
 </html>
