added more styling to tabs. working on populating data from api call

--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -19,9 +19,9 @@
     <a href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
   </header>
   <div class="tabs">
-    <div class="tabLinks">
+    <div id="tabLinks">
       <ul>
-        <li class="tabLink" id="1">One</li>
+        <li class="tabLink selected" id="1">One</li>
         <li class="tabLink" id="2">Two</li>
         <li class="tabLink" id="3">Three</li>
       </ul>
