testing sliding boxes

--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -20,13 +20,11 @@
   </header>
   <div class="tabs">
     <div id="tabLinks">
-      <ul>
-        <li class="tabLink selected" id="1">One</li>
-        <li class="tabLink" id="2">Two</li>
-        <li class="tabLink" id="3">Three</li>
-      </ul>
+      <div class="tabLink selected" id="1">One</div>
+      <div class="tabLink" id="2">Two</div>
+      <div class="tabLink" id="3">Three</div>
     </div>
-    <div>
+    <div id="tabContents">
       <div class="tabContent center" id="tabContent1">content one</div>
       <div class="tabContent slide-right" id="tabContent2">content two</div>
       <div class="tabContent slide-right" id="tabContent3">content three</div>
