--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -7,7 +7,6 @@
   <title>Wikipedia Viewer</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">  -->
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js" async></script>
 </head>
 <body>
   <header>
@@ -30,5 +29,6 @@
       <div class="tabContent slide-right" id="tabContent3">content three</div>
     </div>
   </div>
+  <script src="scripts.js"></script>
 </body>
 </html>
