iframe display working with animations and tabbed content. some colors and styling adjusted. added button to open page in wikipedia. moved tabContent height adjustment to a function for recalc on window resize

--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -24,9 +24,18 @@
       <div class="tabLink" id="3">Three</div>
     </div>
     <div id="tabContents">
-      <div class="tabContent center" id="tabContent1">content one</div>
-      <div class="tabContent slide-right" id="tabContent2">content two</div>
-      <div class="tabContent slide-right" id="tabContent3">content three</div>
+      <div class="tabContent center" id="tabContent1">
+        <iframe src="https://www.wikipedia.org/" sandbox="">content one</iframe>
+        <a class="visitPage" href="https://www.wikipedia.org/" target="_blank" rel="noopener">Visit this page on Wikipedia</a>
+      </div>
+      <div class="tabContent slide-right" id="tabContent2">
+        <iframe src="https://www.wikipedia.org/" sandbox="">content two</iframe>
+        <a class="visitPage" href="https://www.wikipedia.org/" target="_blank" rel="noopener">Visit this page on Wikipedia</a>
+      </div>
+      <div class="tabContent slide-right" id="tabContent3">
+        <iframe src="https://www.wikipedia.org/" sandbox="">content three</iframe>
+        <a class="visitPage" href="https://www.wikipedia.org/" target="_blank" rel="noopener">Visit this page on Wikipedia</a>
+      </div>
     </div>
   </div>
   <script src="scripts.js"></script>
