--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Wikipedia Viewer</title>
-  <!-- <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">  -->
+  <link href="https://fonts.googleapis.com/css?family=Dosis:500" rel="stylesheet"> 
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
