changed error message contaitner to be more generic to display a message when searching for a query

--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -24,7 +24,7 @@
     <div id="tabContents">
     </div>
   </div>
-  <div id="errorMessage"><p>Sorry there was an error or no results from your query, try searching again!</p></div>
+  <div id="messageContainer"><p id="message"></p></div>
   <script src="scripts.js"></script>
 </body>
 </html>
