adjusted styles to make it midly responsive, added flag to prevent searching while a search is occuring, added extra remove content and clear iframe src array calls to prevent occaisonal weird overlap of data

--- a/wikipediaViewer/index.html
+++ b/wikipediaViewer/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <div class="header">
     <h1>Wikipedia Viewer</h1> 
     <form>
       <input type="text" id="query">
@@ -17,7 +17,7 @@
     </form>
     <button type="button" id="getRandomQuery">Random Search</button>
     <a href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
-  </header>
+  </div>
   <div id="messageContainer"><p id="message"></p></div>
   <div id="tabs">
     <div id="tabLinks">
