changed hover styling of search and photo credit buttons

--- a/twitchTV/index.html
+++ b/twitchTV/index.html
@@ -21,7 +21,7 @@
         <div class="input-group">
           <input type="text" class="form-control" id="search" placeholder="Search for a streamer on Twitch TV" aria-label="Search for a streamer on Twitch TV" aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <button class="btn btn-secondary" type="button">Search</button>
+            <button class="btn btn-secondary" type="button" id="searchButton">Search</button>
           </div>
         </div>
       </div>
