added functionality to plus minus button, only puts in one negative symbol, toggles, untoggles after number input, and wont add negative symbol to operators

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -21,7 +21,8 @@
             <div></div>
         </div>
         <div class="row">
-          <div class="slanted buttonDefault bot-left calcButtonContainer" id="clearContainer"><span class="slantedContent calcButton doubleWidth">Clear</span></div>
+          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton doubleWidth">Clear</span></div>
+          <div class="slanted buttonDefault bot-left calcButtonContainer" id="plusMinus"><span class="slantedContent calcButton">&plusmn;</span></div>
           <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">&divide;</span></div>
         </div>
         <div class="row">
